完成了header区域的布局、样式以及关键词的定时切换

--- a/index.html
+++ b/index.html
@@ -9,10 +9,67 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./font/iconfont.css">
+    <link rel="stylesheet" href="./css/header.css">
 </head>
 
 <body>
+    <!-- header开始 -->
+    <div id='header' class="bg-white">
+        <!-- logo -->
+        <div class="nav-box">
+            <h1 class="fl">
+                <a href="index.html">慕课网</a>
+            </h1>
+            <!-- 导航项目 -->
+            <ul class="item-box fl">
+                <li>
+                    <a href="">免费课</a>
+                </li>
+                <li>
+                    <a href="">实战课</a>
+                </li>
+                <li class="new">
+                    <a href="">体系课</a>
+                    <img src="./images/new.png" alt="new">
+                </li>
+                <li>
+                    <a href="">慕课教程</a>
+                </li>
+                <li>
+                    <a href="">专栏</a>
+                </li>
+                <li class="new">
+                    <a href="">手记</a>
+                    <img src="./images/new.png" alt="new">
+                </li>
+                <li>
+                    <a href="">企业服务</a>
+                </li>
+            </ul>
+            <!-- 搜索-->
+            <div class="search fl">
+                <div>
+                    <input type="text">
+                    <span class="iconfont icon-sousuo"></span>
+                </div>
+            </div>
+            <!-- 购物车 -->
+            <div class="login-area fr">
+                <a href="" class="shop-cart">
+                    <span class="iconfont icon-gouwucheman"></span>
+                    <span class="cart-num">8</span>
+                </a>
+                <!-- 我的课程 -->
+                <a href="">我的课程</a>
+                <a href="">
+                    <img src="./images/me.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- header结束 -->
 
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
