--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./font/iconfont.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/banner.css">
 </head>
 
 <body>
@@ -68,6 +69,116 @@
         </div>
     </div>
     <!-- header结束 -->
+
+    <!-- banner区开始 -->
+    <div id="banner" class="bg-white">
+        <div class="banner-box w">
+            <div class="g-banner">
+                <!-- 课程分类列表 -->
+                <div class="course-list fl">
+                    <ul>
+                        <li>
+                            <span class="title">前端开发：</span>
+                            <span class="sub-title">HTML5/Vue/Node.js</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+
+
+                        </li>
+                        <li>
+                            <span class="title">移动开发：</span>
+                            <span class="sub-title">Flutter/Android/iOS</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+                        </li>
+                        <li>
+                            <span class="title">计算机基础：</span>
+                            <span class="sub-title">算法/数学/数据库</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+                        </li>
+                        <li>
+                            <span class="title">前沿技术：</span>
+                            <span class="sub-title">AI/大数据/数据分析</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+                        </li>
+                        <li>
+                            <span class="title">运维测试：</span>
+                            <span class="sub-title">自动化测试/容器</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+                        </li>
+                        <li>
+                            <span class="title">更多方向：</span>
+                            <span class="sub-title">产品设计/UI设计/游戏</span>
+                            <span class="iconfont icon-yousanjiao"></span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 轮播 -->
+                <div class="swiper fr">
+                    <a href="" target="_blank"></a>
+
+                    <!-- 左右切换按钮 -->
+                    <a href="" class="arrow prev"></a>
+                    <a href="" class="arrow next"></a>
+                    <!-- 切换圆点 -->
+                    <ul class="circle-list">
+                        <li class="current">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <!-- 体系课 -->
+            <div class="sys-class">
+                <a href="#" class="sys-icon-box">
+                    <div class="sys-icon fl" style="background-image: url(./images/system/java.png);"></div>
+                    <div class="title fl">
+                        <h4>Java工程师</h4>
+                        <p>王牌编程语言</p>
+                    </div>
+                </a>
+                <a href="#" class="sys-icon-box">
+                    <div class="sys-icon fl" style="background-image: url(./images/system/h5.png);"></div>
+                    <div class="title fl">
+                        <h4>前端工程师</h4>
+                        <p>零基础首选易上手</p>
+                    </div>
+                </a>
+                <a href="#" class="sys-icon-box">
+                    <div class="sys-icon fl" style="background-image: url(./images/system/python.png);"></div>
+                    <div class="title fl">
+                        <h4>Python工程师</h4>
+                        <p>超强生命力</p>
+                    </div>
+                </a>
+                <a href="#" class="sys-icon-box">
+                    <div class="sys-icon fl" style="background-image: url(./images/system/web.png);"></div>
+                    <div class="title fl">
+                        <h4>Go开发工程师</h4>
+                        <p>未来3-5年刚需人才</p>
+                    </div>
+                </a>
+                <a href="#" class="sys-icon-box">
+                    <div class="sys-icon fl" style="background-image: url(./images/system/java-s.png);"></div>
+                    <div class="title fl">
+                        <h4>Java高级开发工程师</h4>
+                        <p>高级人才必修课</p>
+                    </div>
+                </a>
+                <div class="line"></div>
+
+                <a href="#" class="more-btn">
+                    <div>体系课</div>
+                    <div>
+                        more
+                        <span class="iconfont icon-yousanjiao"></span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- banner 区域结束 -->
 
     <script src="./js/index.js"></script>
 </body>
