--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./font/iconfont.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/sk.css">
 </head>
 
 <body>
@@ -180,6 +181,103 @@
     </div>
     <!-- banner 区域结束 -->
 
+    <!--  秒杀拼团开始 -->
+    <div id="sk">
+        <div class="sk-box w">
+            <!-- 标题 -->
+            <h3>
+                <img src="./images/cate/title-bg6.png" alt="秒杀拼团">
+            </h3>
+            <div>
+                <!-- 倒计时 -->
+                <div class="countdown fl">
+                    <h4>限时拼团</h4>
+                    <div class="iconfont icon-shizhong"></div>
+                    <p>拼团倒计时</p>
+                    <div class="timer">
+                        <div id="hour">00</div>
+                        <span>:</span>
+                        <div id="min">00</div>
+                        <span>:</span>
+                        <div id="sec">00</div>
+                    </div>
+                </div>
+                <!-- 滚动课程列表 -->
+                <div class="sk-list fr">
+                    <ul>
+                        <li>
+                            <img src="./images/course/1.png" alt="">
+                            <div class="title">笑傲Java面试</div>
+                            <div class="difficulty">中级·165人</div>
+                            <div class="price">
+                                <span>256</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/2.png" alt="">
+                            <div class="title">搞定大厂前端</div>
+                            <div class="difficulty">高级·453人</div>
+                            <div class="price">
+                                <span>256</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/3.png" alt="">
+                            <div class="title">数据可视化</div>
+                            <div class="difficulty">中级·146人</div>
+                            <div class="price">
+                                <span>398</span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="./images/course/4.png" alt="">
+                            <div class="title">Vue3.0(正式版)</div>
+                            <div class="difficulty">入门·754人</div>
+                            <div class="price">
+                                <span>256</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/5.png" alt="">
+                            <div class="title">C语言</div>
+                            <div class="difficulty">初级·164人</div>
+                            <div class="price">
+                                <span>348</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/6.png" alt="">
+                            <div class="title">Vue3</div>
+                            <div class="difficulty">高级级·563人</div>
+                            <div class="price">
+                                <span>256</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/7.png" alt="">
+                            <div class="title">中高级Java</div>
+                            <div class="difficulty">中级·268人</div>
+                            <div class="price">
+                                <span>1288</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/course/8.png" alt="">
+                            <div class="title">SpringBoot</div>
+                            <div class="difficulty">中级·99人</div>
+                            <div class="price">
+                                <span>368</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <!--  秒杀拼团结束 -->
     <script src="./js/index.js"></script>
 </body>
 
