完成了左右两侧菜单的布局、样式

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/sk.css">
     <link rel="stylesheet" href="./css/course.css">
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 
 <body>
@@ -497,6 +498,55 @@
         </div>
     </div>
     <!-- 新上好课结束 -->
+
+    <!-- 两侧广告栏开始 -->
+    <!-- 左侧广告栏 -->
+    <ul id="menu">
+        <li>新上好课</li>
+        <li>慕课榜单</li>
+        <li>进站必学</li>
+        <li>学习路线</li>
+    </ul>
+    <!-- 右侧广告栏初始状态 -->
+    <div class="menu-right">
+        <ul class="menu-right-hover">
+            <li>
+                <span class="">意见<br>反馈</span>
+            </li>
+            <li>
+                <span class="">帮助<br>中心</span>
+            </li>
+            <li>
+                <span class="">APP</span>
+            </li>
+            <li>
+                <span class="">官方<br>微信</span>
+            </li>
+            <!-- <li>
+                <span class="">回到顶部</span>
+            </li> -->
+        </ul>
+
+        <ul class="menu-right-star">
+            <li>
+                <span class="iconfont icon-yijianfankui"></span>
+            </li>
+            <li>
+                <span class="iconfont icon-bangzhu"></span>
+            </li>
+            <li>
+                <span class="iconfont icon-shouji"></span>
+            </li>
+            <li>
+                <span class="iconfont icon-weixin"></span>
+            </li>
+            <!-- <li>
+                <span class="iconfont icon-fanhuidingbu-"></span>
+            </li> -->
+        </ul>
+    </div>
+    <!-- 两侧广告栏结束 -->
+
     <script src="./js/index.js"></script>
 </body>
 
