完成了live慕课直播部分的布局以及样式

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/sk.css">
     <link rel="stylesheet" href="./css/course.css">
     <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/live.css">
 </head>
 
 <body>
@@ -546,7 +547,50 @@
         </ul>
     </div>
     <!-- 两侧广告栏结束 -->
-
+    <!-- 慕课直播开始 -->
+    <div id="live" class="bg-white">
+        <div class="live-box w">
+            <h3 class="title">
+                <img src="https://static.mukewang.com/static/img/index-v3/title-bg7.png" alt="新上好课">
+                <span>互联网一线企业大佬在线直播 深度讲解提升技术能力</span>
+            </h3>
+            <div class="live-list">
+                <ul>
+                    <li>
+                        <img src="https://img.mukewang.com/63bf7c3b0987107a00000000.jpg" alt="">
+                        <div class="title ellipsis2">90分钟解答你对“中断”的所有疑惑</div>
+                        <div class="time">
+                            <span>
+                                <div class="iconfont icon-shizhong">2月02日 (周四)20:00</div>
+                                <div class="yy">立刻预约</div>
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img.mukewang.com/63c50b8109ae221600000000.jpg" alt="">
+                        <div class="title ellipsis2">小白福利专场：软件测试工程师入门秘籍</div>
+                        <div class="time">
+                            <span>
+                                <div class="iconfont icon-shizhong">2月02日 (周四)20:00</div>
+                                <div class="yy">立刻预约</div>
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img.mukewang.com/6377250d09a1ca0807340276.jpg" alt="">
+                        <div class="title ellipsis2">百万年薪养成攻略：Java架构师的技术布道</div>
+                        <div class="time">
+                            <span>
+                                <div class="iconfont icon-shizhong">2月02日 (周四)20:00</div>
+                                <div class="hf">直播回放</div>
+                            </span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 慕课直播结束 -->
     <script src="./js/index.js"></script>
 </body>
 
