完成了慕课榜单的布局、样式，修改了live慕课直播中box高度过大的问题

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/course.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/live.css">
+    <link rel="stylesheet" href="./css/course-list.css">
 </head>
 
 <body>
@@ -591,6 +592,112 @@
         </div>
     </div>
     <!-- 慕课直播结束 -->
+
+    <!-- 慕课榜单开始 -->
+    <div id="course-list">
+        <div class="course-list-box w">
+            <h3 class="title">
+                <img src="https://static.mukewang.com/static/img/index-v3/title-bg-ranking.png" alt="慕课榜单">
+                <span>以近7日购买、学习相关数据为依据，每日更新</span>
+            </h3>
+            <div class="list-box">
+                <!-- 畅销榜 -->
+                <div class="list fl">
+                    <div class="top-icon1">畅销榜</div>
+                    <div class="body">
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top1.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/5fcdf622090957ef05400304.png" alt="" class="img">
+                            <div class="title ellipsis2">Spring Boot+Vue3前后端分离，实战wiki知识库系统</div>
+                            <div class="price">￥299.00</div>
+                            <div class="count">1928人在学</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top2.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/60223b8609a8ba1705400304.png" alt="" class="img">
+                            <div class="title ellipsis2">Spring Boot2.X + Vue + UniAPP,全栈开发医疗小程序</div>
+                            <div class="price">￥2488.00</div>
+                            <div class="count">246人在学</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top3.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/634e6c9509ca28b205400304.png" alt="" class="img">
+                            <div class="title ellipsis2">SpringBoot+Vue3 项目实战，打造企业级在线办公系统</div>
+                            <div class="price">￥399.00</div>
+                            <div class="count">1695人在学</div>
+                        </a>
+                        <a href="javascript:" class="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;查看完整榜单
+                            <span class="iconfont icon-jiantou_yemian_xiangyou_o"></span>
+                        </a>
+                    </div>
+
+                </div>
+                <!-- 新课榜 -->
+                <div class="list fl">
+                    <div class="top-icon2">新课榜</div>
+                    <div class="body">
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top1.png" alt="" class="num">
+                            <img src="https://img3.mukewang.com/szimg/63b3ecc309cd911100000000.png" alt="" class="img">
+                            <div class="title ellipsis2">Netty+SpringBoot 开发即时通讯系统</div>
+                            <div class="price">￥448.00</div>
+                            <div class="count">难度 初级</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top2.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/63bbd16b09928a0605400304.png" alt="" class="img">
+                            <div class="title ellipsis2">Python 量化交易工程师养成实战-金融高薪领域</div>
+                            <div class="price">￥399.00</div>
+                            <div class="count">难度 中级</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top3.png" alt="" class="num">
+                            <img src="https://img4.mukewang.com/szimg/6380338b09edb25005400304.png" alt="" class="img">
+                            <div class="title ellipsis2">Vue3+Pinia+Vite+TS 还原高性能外卖APP项目</div>
+                            <div class="price">￥299.00</div>
+                            <div class="count">难度 入门</div>
+                        </a>
+                        <a href="javascript:" class="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;查看完整榜单
+                            <span class="iconfont icon-jiantou_yemian_xiangyou_o"></span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- 学习榜 -->
+                <div class="list fl">
+                    <div class="top-icon3">学习榜</div>
+                    <div class="body">
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top1.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/5fcdf622090957ef05400304.png" alt="" class="img">
+                            <div class="title ellipsis2">Python3.8系统入门+进阶 (程序员必备第二语言)</div>
+                            <div class="price">￥366.00</div>
+                            <div class="count">13781人在学</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top2.png" alt="" class="num">
+                            <img src="https://img3.mukewang.com/szimg/6164023209bc7ea405400304.png" alt="" class="img">
+                            <div class="title ellipsis2">前端框架及项目面试 聚焦Vue3/React/Webpack</div>
+                            <div class="price">￥399.00</div>
+                            <div class="count">4330人在学</div>
+                        </a>
+                        <a href="javascript:">
+                            <img src="https://static.mukewang.com/static/img/index-v3/top3.png" alt="" class="num">
+                            <img src="https://img1.mukewang.com/szimg/624d0638094a4fb505400304.png" alt="" class="img">
+                            <div class="title ellipsis2">全新升级，基于Vue3新标准，打造后台综合解决方案</div>
+                            <div class="price">￥2458.00</div>
+                            <div class="count">1478人在学</div>
+                        </a>
+                        <a href="javascript:" class="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;查看完整榜单
+                            <span class="iconfont icon-jiantou_yemian_xiangyou_o"></span>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 慕课榜单结束 -->
     <script src="./js/index.js"></script>
 </body>
 
