--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/live.css">
     <link rel="stylesheet" href="./css/course-list.css">
+    <link rel="stylesheet" href="./css/learn.css">
 </head>
 
 <body>
@@ -698,6 +699,281 @@
         </div>
     </div>
     <!-- 慕课榜单结束 -->
+
+    <!-- 进站必学开始 -->
+    <div id="new-new-course" class="bg-white">
+        <div class="new-new-course-box w">
+            <h3 class="title">
+                <img src="./images/cate/title-bg4.png" alt="新上好课">
+                <a href="javascript:" class="active">推荐</a>
+                <a href="javascript:">计算机基础</a>
+                <a href="javascript:">前端开发</a>
+                <a href="javascript:">后端开发</a>
+                <a href="javascript:">精品免费</a>
+            </h3>
+            <div class="new-new-course-list">
+                <!-- 推荐 -->
+                <ul class="current">
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/6124bf8c09eb7d2700000000.png" alt="">
+                        <div class="title ellipsis2">SpringBoot+Vue3 项目实战，打造企业级在线办公系统</div>
+                        <div class="difficulty">中级·1697人报名</div>
+                        <div class="bottom">
+                            <span class="price">￥399</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/62fca73c097563b805400304.png" alt="">
+                        <div class="title ellipsis2">互联网人副业指南 传授思维与方法 启动你的首个项目</div>
+                        <div class="difficulty">初级·227人报名</div>
+                        <div class="bottom">
+                            <span class="price">￥799</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/63441f8509afcc2305400304.png" alt="">
+                        <div class="title ellipsis2">国家级认证-软考高级，一站式通关课程，全力备战2023</div>
+                        <div class="difficulty">高级 · 91人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥999</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/60223b8609a8ba1705400304.png" alt="">
+                        <div class="title ellipsis2">Spring Boot+Vue3前后端分离，实战wiki知识库系统</div>
+                        <div class="difficulty">初级 · 1930人报名</div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/61a9b12209fdc07405400304.png" alt="">
+                        <div class="title ellipsis2">C/C++气象数据中心实战，手把手教你做工业级项目</div>
+                        <div class="difficulty">中级 · 752人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥568</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img1.mukewang.com/szimg/62ff452308323ab005400304.jpg" alt="">
+                        <div class="title ellipsis2">React18 系统精讲 结合TS打造旅游电商平台</div>
+                        <div class="difficulty">中级 · 1595人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img1.mukewang.com/szimg/62f3160409c25d1e05400304.png" alt="">
+                        <div class="title ellipsis2">（新升级）重学C++ ，重构你的C++知识体系</div>
+                        <div class="difficulty">中级 · 3422人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥448</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/5fcdf622090957ef05400304.png" alt="">
+                        <div class="title ellipsis2">Python3.8系统入门+进阶 (程序员必备第二语言)</div>
+                        <div class="difficulty">初级 · 13784人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥366</span>
+                        </div>
+                    </li>
+                </ul>
+
+                <!-- 计算机基础 -->
+                <ul>
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/6284523e099bbde705400304.png" alt="">
+                        <div class="title ellipsis2">（新版）计算机基础，计算机组成原理+操作系统+网络</div>
+                        <div class="difficulty">中级 · 7370人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥399</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img2.mukewang.com/szimg/5fc5ab8d099b1bee05400304.png" alt="">
+                        <div class="title ellipsis2">C语言系统化精讲 重塑编程思想 打造坚实的开发基础</div>
+                        <div class="difficulty">中级 · 1809人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/5fcdf2e909530b7c05400304.png" alt="">
+                        <div class="title ellipsis2">算法与数据结构（C++版） 面试/评级的算法复习技能包</div>
+                        <div class="difficulty">中级·147人报名</div>
+                        <div class="bottom">
+                            <span class="price">￥1299</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/5fc064180941622b05400304.png" alt="">
+                        <div class="title ellipsis2">算法与数据结构（C++版） 面试/评级的算法复习技能包</div>
+                        <div class="difficulty">中级 · 1672人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥399</span>
+                        </div>
+                    </li>
+                </ul>
+
+                <!-- 前端开发 -->
+                <ul>
+                    <li>
+                        <img src="https://img1.mukewang.com/szimg/60dea91109143a3005400304.png" alt="">
+                        <div class="title ellipsis2">uni-app从入门到进阶 系统完成项目实战</div>
+                        <div class="difficulty">初级 · 802人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥348</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/5fc0639609b509a600000000.png" alt="">
+                        <div class="title ellipsis2">（最新升级）Vue3 从入门与项目实战 掌握完整知识体系</div>
+                        <div class="difficulty">中级 · 2793人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥268</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/60223b8609a8ba1705400304.png" alt="">
+                        <div class="title ellipsis2">Spring Boot+Vue3前后端分离，实战wiki知识库系统</div>
+                        <div class="difficulty">初级 · 1930人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/6164020a0902065805400304.png" alt="">
+                        <div class="title ellipsis2">一天时间高效准备前端技术一面 匹配大厂面试要求</div>
+                        <div class="difficulty">初级 · 4455人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+
+                </ul>
+
+                <!-- 后端开发 -->
+                <ul>
+                    <li>
+                        <img src="https://img2.mukewang.com/szimg/5ffd399d090e67a105400304.png" alt="">
+                        <div class="title ellipsis2">Kubernetes 入门到进阶实战，系统性掌握 K8s 生产实践</div>
+                        <div class="difficulty">中级 · 1104人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥299</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/5fd190d709afb12005400304.png" alt="">
+                        <div class="title ellipsis2">百万级高并发WebRTC流媒体服务器设计与开发</div>
+                        <div class="difficulty">高级 · 1853人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥366</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img4.mukewang.com/szimg/5fd188fa09fc1a8705400304.png" alt="">
+                        <div class="title ellipsis2">Google资深工程师深度讲解Go语言 由浅入深掌握Go语言</div>
+                        <div class="difficulty">中级 · 5768人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥399</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img3.mukewang.com/szimg/5fce06be09d3611005400304.png" alt="">
+                        <div class="title ellipsis2">Python爬虫工程师从入门到进阶 大数据时代必备</div>
+                        <div class="difficulty">中级 · 2108人报名 </div>
+                        <div class="bottom">
+                            <span class="price">￥399</span>
+                        </div>
+                    </li>
+                </ul>
+                <!-- 精品免费 -->
+                <ul>
+                    <li>
+                        <img src="https://img1.mukewang.com/5fe43db00001a8dd05400304.jpg" alt="">
+                        <div class="title ellipsis2">初识HTML(5)+CSS(3)-升级版</div>
+                        <div class="difficulty">入门 · 1212196人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img.mukewang.com/5fe442dc0001763905400304.jpg" alt="">
+                        <div class="title ellipsis2">Java入门第一季（IDEA工具）升级版</div>
+                        <div class="difficulty">入门 · 1154484人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img2.mukewang.com/5fe442db000177d805400304.jpg" alt="">
+                        <div class="title ellipsis2">JavaScript入门篇 </div>
+                        <div class="difficulty">入门 · 732798人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/5fe442e7000105e905400304.jpg" alt="">
+                        <div class="title ellipsis2">C#开发轻松入门</div>
+                        <div class="difficulty">入门 · 244135人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img2.mukewang.com/606c41a60914530f05400304.png" alt="">
+                        <div class="title ellipsis2">趣味 C++ 入门</div>
+                        <div class="difficulty">入门 · 19971人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img1.mukewang.com/600ebd8b08a2013605400304.jpg" alt="">
+                        <div class="title ellipsis2">vue3.0实现todolist </div>
+                        <div class="difficulty">中级 · 16604人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <img src="https://img1.mukewang.com/5fe443100001f2a805400304.jpg" alt="">
+                        <div class="title ellipsis2">Linux速成班</div>
+                        <div class="difficulty">入门 · 23133人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://img3.mukewang.com/600a8570097f897e05400304.png" alt="">
+                        <div class="title ellipsis2">高性能 FastAPI 框架入门精讲</div>
+                        <div class="difficulty">入门 · 8273人报名 </div>
+                        <div class="bottom">
+                            <span class="price">免费</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 进站必学结束 -->
     <script src="./js/index.js"></script>
 </body>
 
