完成了页脚的布局和样式，增添了几个新的iconfont样式

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/course-list.css">
     <link rel="stylesheet" href="./css/learn.css">
     <link rel="stylesheet" href="./css/road.css">
+    <link rel="stylesheet" href="./css/foot.css">
 </head>
 
 <body>
@@ -1121,6 +1122,76 @@
         </div>
     </div>
     <!-- 学习路线结束 -->
+
+    <!-- 页脚开始 -->
+    <div id="footer">
+        <div class="footer-box w">
+            <div class="help">
+                <ul>
+                    <li><a href="">企业服务</a></li>
+                    <li><a href="">网站地图</a></li>
+                    <li><a href="">关于我们</a></li>
+                    <li><a href="">联系我们</a></li>
+                    <li><a href="">讲师招募</a></li>
+                    <li><a href="">帮助中心</a></li>
+                    <li><a href="">意见反馈</a></li>
+                    <li><a href="">代码托管</a></li>
+                </ul>
+            </div>
+
+            <div class="bottom">Copyright 2023 imooc.com <img src="https://static.mukewang.com/static/img/beianicon.png"
+                    alt="">京剧京ICP备 12003892号-11 京公网安备11010802030151号 营业执照</div>
+            <div class="icon">
+                <a href=""><span class="iconfont icon-shoucang"></span></a>
+                <a href=""><span class="iconfont icon-weixin"></span></a>
+                <a href=""><span class="iconfont icon-weibo"></span></a>
+                <a href=""><span class="iconfont icon-QQ"></span></a>
+                <br>
+                <p>收藏网站&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;官方公众号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;官方微博&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;官方空间
+                </p>
+            </div>
+            <p>友情链接：</p>
+            <div class="link">
+
+                <ul>
+
+                    <li><a href="">求艺网</a></li>
+                    <li><a href="">帮考网</a></li>
+                    <li><a href="">考研网</a></li>
+                    <li><a href="">精英考试网</a></li>
+                    <li><a href="">慕课教程</a></li>
+                    <li><a href="">育路教育</a></li>
+                    <li><a href="">图片素材</a></li>
+                    <li><a href="">橡皮牛教育网</a></li>
+                    <li><a href="">听力课堂</a></li>
+                    <li><a href="">高顿教育</a></li>
+                    <li><a href="">可可英语</a></li>
+                    <li><a href="">W3Cschool</a></li>
+                    <li><a href="">会计学堂</a></li>
+                    <li><a href="">招生信息网</a></li>
+                    <li><a href="">慕课专题</a></li>
+                    <li><a href="">起点课堂 </a></li>
+                    <li><a href="">溜溜自学网</a></li>
+                    <li><a href="">在职研究生</a></li>
+                    <li><a href="">人人都是产品经理</a></li>
+                    <li><a href="">考研</a></li>
+                    <li><a href="">节日作文范文</a></li>
+                    <li><a href="">APP开发</a></li>
+                    <li><a href="">好发表</a></li>
+                    <li><a href="">CRMEB</a></li>
+                    <li><a href="">大风车网</a></li>
+                    <li><a href="">组卷网</a></li>
+                    <li><a href="">高考志愿填报 </a></li>
+                    <li><a href="">运营营销推广</a></li>
+                    <li><a href="">西部数码</a></li>
+                </ul>
+                <div>&nbsp;</div>
+                <div>&nbsp;</div>
+            </div>
+        </div>
+    </div>
+    <!-- 页脚结束 -->
+
     <script src="./js/index.js"></script>
 </body>
 
